--- a/BlockedFrontend/templates/admin/tests_edit.html
+++ b/BlockedFrontend/templates/admin/tests_edit.html
@@ -35,7 +35,7 @@
             </div>
             <div role="tabpanel" class="tab-pane" id="networks">
                 <h3>ISPs</h3>
-                <table class="table">
+                <table class="table table-condensed">
                     <tr>
                     <th></th>
                     <th>Country / Network</th>
