--- a/BlockedFrontend/templates/admin/admin.page.html
+++ b/BlockedFrontend/templates/admin/admin.page.html
@@ -32,6 +32,7 @@
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Legal Requests <span class="caret"></span></a>
               <ul class="dropdown-menu">
                   <li><a href="{{ url_for('.courtorders') }}">Admin</a></li>
+                  <li><a href="{{ url_for('.courtorders_review') }}">Review Unmatched</a></li>
                   <li><a href="{{ url_for('.courtorders_group_import') }}">Import URL Groups</a></li>
               </ul>
 
