--- a/BlockedFrontend/templates/blocked-uk/BasicPage.page.html
+++ b/BlockedFrontend/templates/blocked-uk/BasicPage.page.html
@@ -51,6 +51,19 @@ banner_text_block(bool): show banner text block, default true
         </div>
       </div>
     </div>
+    <div class="topstrip2">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3" style="padding-top: 1.5em"><span style="font-size: 150%; ">Support the project</span></div>  
+          <div class="col-md-9">
+            <p>You can join the Open Rights Group or <a href="https://www.openrightsgroup.org/donate">donate</a> to   
+            <a href="https://www.blocked.org.uk/support">support the project</a>.</p>
+
+            <div>With your help, we can correct mistakes caused by overblocking and improve transparency about filtering in the UK.</div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="container">
 
     <div class="row menurow">
