--- a/BlockedFrontend/templates/admin/tests_edit.html
+++ b/BlockedFrontend/templates/admin/tests_edit.html
@@ -30,7 +30,7 @@
                 <input type="hidden" name="source" value="tag" />                
                 {# <input type="radio" name="source" value="query" {{ 'checked' if test.filter else '' }} />
                 {{ forms.select_field('Filter set', 'filter', test.filter, ['']+filters) }} #}
-                {{ forms.select_field('Tag', 'tag', test.tag, ['']+tags) }}
+                {{ forms.select_field('Tag', 'tag', test.tags|first, ['']+tags) }}
                 
             </div>
             <div role="tabpanel" class="tab-pane" id="networks">
