--- a/BlockedFrontend/templates/admin/tests.html
+++ b/BlockedFrontend/templates/admin/tests.html
@@ -26,7 +26,7 @@
               <td>
                   {% if test.status in ('RUNNING','WAITING') %}
                   <a href="{{url_for('.tests_status', id=test.id, status='paused')}}"><span class="glyphicon glyphicon-pause"></span></a>
-                  {% elif test.status in ('PAUSED',) %}
+                  {% elif test.status in ('PAUSED','NEW') %}
                   <a href="{{url_for('.tests_status', id=test.id, status='running')}}"><span class="glyphicon glyphicon-play"></span></a>
                   {% endif %}
                   {% if test.status in ('RUNNING','PAUSED','WAITING') %}
