--- a/BlockedFrontend/templates/admin/courtorders_view.html
+++ b/BlockedFrontend/templates/admin/courtorders_view.html
@@ -72,10 +72,10 @@
                     </h4>
                     <table class="table">
                         <tr>
-                            <th></th>
-                            <th>URL</th>
-                            <th>Whois Expiry</th>
-                            <th></th>
+                            <th style="width: 10%"></th>
+                            <th style="width: 50%">URL</th>
+                            <th style="width: 25%">Whois Expiry</th>
+                            <th style="width: 15%"></th>
                         </tr>
                     {% for site in grpsites %}
                         <tr>
@@ -85,13 +85,17 @@
                             <td>{{site.url}}</td>
                             <td>{{site.whois_expiry|fmdate}}</td>
                             <td>
+                            
+                            <a href="{{ url_for('.courtorders_site_flag',id=site.id) }}" 
+                                class="{{ 'btn btn-default active' if site['flag_id'] else 'btn btn-default' }}" 
+                                title="{{'This site has been flagged' if site['flag_id'] else 'Flag this site' }}">
+                                <span class="glyphicon glyphicon-flag "></span>
+                            </a>
+                            
                             <a href="{{ url_for('.urls',url=site.url) }}" title="Administer URL">
                                 <span class="glyphicon glyphicon-tag"></span>
                             </a>
-                            <a href="{{ url_for('.courtorders_site_flag',id=site.id) }}" class="{{ 'label label-info' if site['flag_id'] else '' }}" title="{{'This site has been flagged' if site['flag_id'] else 'Flag this site' }}">
-                                <span class="glyphicon glyphicon-flag "></span>
-                            </a>
-                            <a href="{{ url_for('.courtorders_site_delete',id=site.id) }}" title=">
+                            <a href="{{ url_for('.courtorders_site_delete',id=site.id) }}" title="Delete this site">
                                 <span class="glyphicon glyphicon-trash"></span>
                             </a>
                             </td>
