live links (new window) for court-blocked URLs;  openrightsgroup/blocked-org-uk#291

--- a/BlockedFrontend/templates/admin/courtorders_view.html
+++ b/BlockedFrontend/templates/admin/courtorders_view.html
@@ -82,7 +82,7 @@
                             <td>
                             <input type="checkbox" name="site_id" value="{{site.id}}" />
                             </td>
-                            <td>{{site.url}}</td>
+                            <td><a href="{{site.url}}" target="_blank">{{site.url}}</a></td>
                             <td>{{site.whois_expiry|fmdate}}</td>
                             <td>
                             
