live links (new window) for court-blocked URLs;  openrightsgroup/blocked-org-uk#291

--- a/BlockedFrontend/templates/admin/courtorders_flag.html
+++ b/BlockedFrontend/templates/admin/courtorders_flag.html
@@ -10,7 +10,7 @@
 
     <h1>{{pagetitle}}</h1>
     <h2>{{ judgment.name }}</h2>
-    <h3>Flag {{ url.url }}</h3>
+    <h3>Flag <a href="{{ url.url }}" target="_blank">{{ url.url }}</a></h3>
   </div>
 
 </div>
