Errors by ISP; openrightsgroup/blocked-org-uk#331

--- a/BlockedFrontend/templates/cms/legal-block-errors.html
+++ b/BlockedFrontend/templates/cms/legal-block-errors.html
@@ -17,7 +17,7 @@
 
 {% block body %}
 <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-6">
 
 <div class="stats">
 <div>
@@ -35,12 +35,13 @@ sites incorrectly blocked
 of sites incorrectly blocked
 </div>
 
+<div>&nbsp;</div>
 </div>
 
-
+<!--
     </div>
 
-    <div class="col-md-4">
+    <div class="col-md-4"> -->
     <h4>Errors by type</h4>
 <table class="table">
 <tr>
@@ -56,7 +57,7 @@ of sites incorrectly blocked
 </table>    
         
     </div>
-    <div class="col-md-5">
+    <div class="col-md-6">
     <h4>Errors by ISP</h4>
     <table class="table">
     <tr>
