--- a/BlockedFrontend/templates/admin/courtorders_flag.html
+++ b/BlockedFrontend/templates/admin/courtorders_flag.html
@@ -15,7 +15,7 @@
 
 </div>
 <div class="row">
-  <div class="col-md-8">
+  <div class="col-md-6">
 
 <form action="{{ url_for('.courtorders_site_flag_post') }}" method="POST">
     <input type="hidden" name="urlid" value="{{ url.id }}" />
@@ -47,6 +47,26 @@
 
 </form> 
 
+    </div>
+    <div class="col-md-6">
+        <h4>Current status</h4>
+    <table class="table small">
+    <tr>
+    <th>ISP</th>
+    <th>Status</th>
+    <th>Block Type</th>
+    <th>Created</th>
+    </tr>
+    {% for row in status %}
+    <tr class="{{ 'warning'  if row.status == 'blocked' else '' }}">
+    <td>{{row.name}}</td>
+    <td>{{row.status}}</td>
+    <td>{{row.blocktype}}</td>
+    <td>{{row.created|fmdate}}</td>
+    </tr>
+    {% endfor %}
+    </table>
+    
     </div>
 </div>
 
