--- a/BlockedFrontend/templates/admin/courtorders_view.html
+++ b/BlockedFrontend/templates/admin/courtorders_view.html
@@ -72,10 +72,10 @@
                     </h4>
                     <table class="table">
                         <tr>
-                            <th style="width: 10%"></th>
+                            <th style="width: 5%"></th>
                             <th style="width: 50%">URL</th>
                             <th style="width: 25%">Whois Expiry</th>
-                            <th style="width: 15%"></th>
+                            <th style="width: 20%"></th>
                         </tr>
                     {% for site in grpsites %}
                         <tr>
@@ -90,8 +90,8 @@
                                 class="{{ 'btn btn-default active' if site['flag_id'] else 'btn btn-default' }}" 
                                 title="{{'This site has been flagged' if site['flag_id'] else 'Flag this site' }}">
                                 <span class="glyphicon glyphicon-flag "></span>
+                            <span class="badge">{{ site.flag_count }}</span>
                             </a>
-                            
                             <a href="{{ url_for('.urls',url=site.url) }}" title="Administer URL">
                                 <span class="glyphicon glyphicon-tag"></span>
                             </a>
