fix reason queries

--- a/BlockedFrontend/templates/cms/legal-block-errors.html
+++ b/BlockedFrontend/templates/cms/legal-block-errors.html
@@ -47,11 +47,11 @@ of sites incorrectly blocked
     </div>
 
     <div class="col-md-4"> 
-    <h4>Errors by type</h4>
+    <h4>Error status by type</h4>
 <table class="table">
 <tr>
 <th>Category</th>
-<th class="num">Total errors</th>
+<th class="num">Total</th>
 </tr>
 {% for row in stats2 %}
 <tr>
