hide "block appears correct" from error summary; openrightsgroup/blocked-org-uk#337

--- a/BlockedFrontend/templates/cms/legal-block-errors.html
+++ b/BlockedFrontend/templates/cms/legal-block-errors.html
@@ -54,10 +54,12 @@ of sites incorrectly blocked
 <th class="num">Total</th>
 </tr>
 {% for row in stats2 %}
+{% if row.reason != 'block_appears_correct' %}
 <tr>
   <td>{{ row.reason|replace('_',' ')|capitalize }}</td>
   <td class="num">{{ row.error_count }}</td>
 </tr>
+{% endif %}
 {% endfor %}
 </table>    
         
