Add paging to legal block errors; openrightsgroup/blocked-org-uk#337

--- a/BlockedFrontend/templates/cms/legal-block-errors.html
+++ b/BlockedFrontend/templates/cms/legal-block-errors.html
@@ -113,6 +113,9 @@ of sites incorrectly blocked
 </tr>
 
 {% endfor %}
+</table>
+{{ paging.page_list('.legal_errors', page, pagecount) }} 
+
 {% endblock %}
 
 
