move flag reasons to resource data, add reverse proxy option; closes openrightsgroup/blocked-org-uk#339

--- a/BlockedFrontend/templates/admin/courtorders_flag.html
+++ b/BlockedFrontend/templates/admin/courtorders_flag.html
@@ -19,7 +19,7 @@
 
 <form action="{{ url_for('.courtorders_site_flag_post') }}" method="POST">
     <input type="hidden" name="urlid" value="{{ url.id }}" />
-{% for reason in ['Block appears correct', 'Domain Inactive','Domain for sale or parked', 'Domain in legitimate usage', 'Domain currently broken', 'Domain does not resolve'] %}
+{% for reason in flagreasons.reasons %}
 
 {{ forms.radio_field(reason, 'reason', reason.lower().replace(' ','_'), (flag.get('reason') == reason.lower().replace(' ','_')) ) }}
 
@@ -32,9 +32,9 @@
     Domain may be abusive: 
   </label>
   <select name="abusetype">
-  <option value="malware" {{'selected' if flag.get('abusetype') == 'malware' else '' }}>Malware</option>
-  <option value="redirects" {{'selected' if flag.get('abusetype') == 'redirects' else '' }}>Click fraud/redirects</option>
-  <option value="other" {{'selected' if flag.get('abusetype') == 'other' else '' }}>Other</option>
+  {% for name, description in flagreasons.abusetypes.iteritems() %}
+  <option value="{{name}}" {{'selected' if flag.get('abusetype') == name else '' }}>{{description}}</option>
+  {% endfor %}
   </select>
 </div>
 </div>
